// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WatchCases basic-type-error 1`] = `
Object {
  "errors": Array [
    "Xdir/.tmp/watchCases/basic-type-error/src/entry.ts
Type '\\"test\\"' is not assignable to type 'number'.",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases basic-type-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases basic-type-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases basic-type-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-error 1`] = `
Object {
  "errors": Array [
    "Xdir/.tmp/watchCases/css-modules-error/src/entry.ts
Property 'test' does not exist on type 'typeof \\"Xdir/.tmp/watchCases/css-modules-erro...'.",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-removal-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-removal-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases file-removal-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases file-removal-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 2`] = `
Object {
  "errors": Array [
    "Xdir/.tmp/watchCases/ts-dependency-only-error/src/entry.ts
File 'Xdir/.tmp/watchCases/ts-dependency-only-error/src/type.ts' is not a module.",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-error 3`] = `
Object {
  "errors": Array [
    "Xdir/.tmp/watchCases/ts-dependency-only-removal-error/src/entry.ts
Cannot find module './type'.",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-error 1`] = `
Object {
  "errors": Array [
    "Xdir/.tmp/watchCases/tslint-error/src/util.ts
' should be \\"",
    "Xdir/.tmp/watchCases/tslint-error/src/entry.ts
' should be \\"",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-error 2`] = `
Object {
  "errors": Array [
    "Xdir/.tmp/watchCases/tslint-error/src/entry.ts
' should be \\"",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-error 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-warning 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "Xdir/.tmp/watchCases/tslint-warning/src/util.ts
' should be \\"",
    "Xdir/.tmp/watchCases/tslint-warning/src/entry.ts
' should be \\"",
  ],
}
`;

exports[`WatchCases tslint-warning 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "Xdir/.tmp/watchCases/tslint-warning/src/entry.ts
' should be \\"",
  ],
}
`;

exports[`WatchCases tslint-warning 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases type-patches-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases type-patches-error 2`] = `
Object {
  "errors": Array [
    "Xdir/.tmp/watchCases/type-patches-error/src/entry.ts
Cannot find module './test.svg'.",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases type-patches-error 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;
